--- a/css/style.css
+++ b/css/style.css
@@ -1550,6 +1550,8 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 15px;
 }
 
@@ -1619,6 +1621,9 @@ button,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
   row-gap: 10px;
 }
 
@@ -2034,6 +2039,18 @@ button,
   z-index: -1;
 }
 
+.form .input-message {
+  margin-top: 5px;
+}
+
+.form .input-message.is-invalid {
+  color: #ffe600;
+}
+
+.form .input-message.is-valid {
+  color: #ffff00;
+}
+
 .form .container {
   position: relative;
 }
@@ -2096,6 +2113,7 @@ button,
 
 .form input:not([type=checkbox]),
 .form textarea {
+  width: 100%;
   padding: 14px;
   font-family: "PT Mono", "Arial", sans-serif;
   font-style: normal;
@@ -2168,6 +2186,12 @@ button,
   gap: 50px;
 }
 
+.form__buttons-wrap button {
+  -webkit-box-ordinal-group: 0;
+  -ms-flex-order: -1;
+  order: -1;
+}
+
 .form button {
   padding: 13px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -2207,6 +2231,7 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -2217,6 +2242,11 @@ button,
   -ms-user-select: none;
   user-select: none;
   cursor: pointer;
+}
+
+.form__agree-label .input-message {
+  position: absolute;
+  top: 30px;
 }
 
 .form__agree-label:hover {
@@ -2274,6 +2304,18 @@ button,
   color: #f2f5f7;
 }
 
+.modal-form .input-message {
+  margin-top: 5px;
+}
+
+.modal-form .input-message.is-invalid {
+  color: #ffe600;
+}
+
+.modal-form .input-message.is-valid {
+  color: #ffff00;
+}
+
 .modal-form fieldset {
   margin: 0;
   padding: 0;
@@ -2321,37 +2363,47 @@ button,
   gap: 20px;
 }
 
-.modal-form label {
+.modal-form__agree-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   padding: 0 8px;
   font-size: 14px;
   line-height: 16px;
   margin-bottom: 4px;
+  -webkit-box-ordinal-group: 2;
+  -ms-flex-order: 1;
+  order: 1;
 }
 
-.modal-form label:hover {
+.modal-form__agree-label .input-message {
+  position: absolute;
+  top: 18px;
+}
+
+.modal-form__agree-label:hover {
   opacity: 0.6;
 }
 
-.modal-form label:focus-visible {
+.modal-form__agree-label:focus-visible {
   outline: none;
   -webkit-box-shadow: 0 0 0 4px #041827, 0 0 0 6px #00b2ff;
   box-shadow: 0 0 0 4px #041827, 0 0 0 6px #00b2ff;
 }
 
-.modal-form label:active {
+.modal-form__agree-label:active {
   opacity: 0.3;
 }
 
-.modal-form label:focus-within {
+.modal-form__agree-label:focus-within {
   outline: 3px solid #041827;
   outline-offset: 6px;
 }
 
 .modal-form input:not([type=checkbox]),
 .modal-form textarea {
+  width: 100%;
   padding: 14px;
   font-family: "PT Mono", "Arial", sans-serif;
   font-style: normal;
@@ -2549,6 +2601,7 @@ button,
 
 @media (max-width: 1023px) {
   .main-header {
+    position: unset;
     background-image: -o-linear-gradient(bottom, rgba(4, 24, 39, 0) 0, #041827 15px);
     background-image: linear-gradient(0deg, rgba(4, 24, 39, 0) 0, #041827 15px);
     padding-top: 20px;
@@ -2821,6 +2874,10 @@ button,
   .form__agree-label {
     margin-top: 5px;
   }
+
+  .main__screen {
+    margin-top: -100px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2937,6 +2994,9 @@ button,
 
   .main-footer__site-sections-part {
     row-gap: 10px;
+    -webkit-box-align: unset;
+    -ms-flex-align: unset;
+    align-items: unset;
   }
 
   .main-footer__site-sections-item {
@@ -3233,6 +3293,10 @@ button,
   .modal-form input:not([type=checkbox]),
   .modal-form textarea {
     width: 100%;
+  }
+
+  .main__screen {
+    margin-top: -70px;
   }
 }
 
